--- a/src/Pages/Checkout/Checkout.css
+++ b/src/Pages/Checkout/Checkout.css
@@ -5,7 +5,7 @@
     border-radius: 5px;
     cursor: pointer;
     margin: 15px;
-    background-color: rgb(123,122,122);
+    background-color: rgba(5, 5, 5, 0.801);
     border: none;
     color: white;
   }
