--- a/src/Pages/Checkout/Checkout.module.css
+++ b/src/Pages/Checkout/Checkout.module.css
@@ -1,5 +1,5 @@
 .trapezoid {
-    border-bottom: 50px solid gray;
+    border-bottom: 50px solid rgb(255, 60, 0);
     border-left: 25px solid transparent;
     border-right: 25px solid transparent;
     height: 0;
@@ -10,24 +10,3 @@
     -moz-filter: drop-shadow(0px 128px 102px rgba(120,103,103,0.38));
   }
 
-.ghe{ 
-  /*  Ghê Thường */
-  width: 35px;
-  height: 35px;
-  border-radius: 5px;
-  cursor: pointer;
-  margin: 15px;
-  background-color: rgb(123,122,122);
-  border: none;
-  color: white;
-}
-.gheDaDat {
-  cursor: no-drop;
-  background-color: rgb(224, 37, 37);
-}
-.gheDangDat {
-  background-color: rgb(56, 252, 7) !important
-}
-.gheVip{
-  background-color: rgb(235, 72, 13);
-}
