--- a/src/Pages/Checkout/Checkout.module.css
+++ b/src/Pages/Checkout/Checkout.module.css
@@ -1,12 +1,12 @@
 .trapezoid {
-    border-bottom: 50px solid rgb(255, 60, 0);
-    border-left: 25px solid transparent;
-    border-right: 25px solid transparent;
-    height: 0;
-    width: 80%;
-    opacity: 0.2;
-    filter: drop-shadow(0px 128px 102px rgba(120,103,103,0.38));
-    -webkit-filter: drop-shadow(0px 128px 102px rgba(120,103,103,0.38));
-    -moz-filter: drop-shadow(0px 128px 102px rgba(120,103,103,0.38));
-  }
+  border-bottom: 50px solid gray;
+  border-left: 25px solid transparent;
+  border-right: 25px solid transparent;
+  height: 0;
+  width: 80%;
+
+  filter: drop-shadow(0px 128px 63px rgba(8, 8, 8, 0.38));
+  -webkit-filter: drop-shadow(0px 128px 63px rgba(8, 8, 8, 0.38));
+  -moz-filter: drop-shadow(0px 128px 63px rgba(8, 8, 8, 0.38));
+}
 
